--- a/Listr/Resources/CSS/Listr.css
+++ b/Listr/Resources/CSS/Listr.css
@@ -139,7 +139,7 @@ body {
     border: none;
     font-weight: bold;
     font-size: 30px;
-    padding-left: 11%;
+    padding-left: 25px;
     text-align: left;
     transition: all ease 1s;
 }
